# laba10

backend/: pom.xml
backend/front/: package-lock.json  package.json
backend/src/main/java/ru/iu3/rpo/backend/auth/: SecurityConfiguration.java
backend/src/main/java/ru/iu3/rpo/backend/controllers/: ArtistController.java  CountryController.java  MuseumController.java  SampleController.java
backend/src/main/java/ru/iu3/rpo/backend/models/: Artist.java  Country.java
backend/src/main/java/ru/iu3/rpo/backend/repositories/: CountryRepository.java
backend/src/main/resources/: application.properties
fclient/app/: build.gradle
fclient/app/src/main/: AndroidManifest.xml
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/app/src/main/java/ru/iu3/fclient/: MainActivity.java  PinpadActivity.java
fclient/app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
fclient/app/src/main/res/values/: colors.xml  styles.xml
fclient/gradle/wrapper/: gradle-wrapper.properties
